<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_DB_StructureType" Id="{27b504a4-2c14-4117-bae3-4c9a5c37d97a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_DB_StructureType :
(
	AlarmHistory := 0,
	ProductionHistory := 1,
	ProductionReport := 2,
	ProductionSummary := 3,
	SoDuration:=4,
	StopCount:=5,
	RegularCheckResults:=6
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>