<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_StopCount" Id="{9e1c5b35-514a-49e4-879c-570e0d35ec10}">
    <Declaration><![CDATA[TYPE ST_StopCount :
	STRUCT
		dtStart_time              : DT ;
		dtEnd_time                : DT ;
		wsEmployee_name_logged_in : WSTRING(255) ;
		sStop_reason             : STRING(3) ;
		sAssembly_income_code    : STRING(16) ;
		sSo_number               : STRING(12) ;
		sFaam_id                 : STRING(20) ;
		diSo_id                   : DINT ;
		wsEquipment               : WSTRING(25) ;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>